--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <p id="description"></p>
         </div>
     </main>
-
-    <script src="index.js"></script>
+    
+<link rel="stylesheet" href="./style.css">
+<script src="./index.js"></script>
+    
 </body>
 
 </html>
